--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;700&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css");
 * {
   margin: 0%;
   -webkit-box-sizing: border-box;
@@ -29,6 +30,7 @@
   border-radius: 20px;
   -webkit-box-shadow: 6px 6px 15px #b8373752;
           box-shadow: 6px 6px 15px #b8373752;
+  padding: 10px;
 }
 
 .global-cases {
@@ -79,7 +81,7 @@
 }
 
 p, h1 {
-  padding: 2vw 3vw;
+  padding: 1vw 2vw;
   text-align: center;
   font-weight: bolder;
   font-size: 3vh;
@@ -104,6 +106,18 @@ th {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+}
+
+th i {
+  visibility: hidden;
+}
+
+th:hover {
+  cursor: pointer;
+}
+
+th:hover i {
+  visibility: visible;
 }
 
 tbody:nth-child(even) {
